--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -36,11 +37,13 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-image-crop": "^11.0.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
