--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@next/third-parties": "^14.2.10",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -36,6 +37,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "geist": "^1.3.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
@@ -47,12 +49,14 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.6",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.51.1",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
