--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "country-flag-icons": "^1.5.13",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "embla-carousel-react": "^8.3.0",
     "geist": "^1.3.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.408.0",
