--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "country-flag-icons": "^1.5.13",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
