--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.6",
     "react-leaflet": "^4.2.1",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
